--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,13 @@
     <properties>
         <project.mainClass>com.wlf.App</project.mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
-        <version.javafx>22</version.javafx>
-        <version.lombok>1.18.32</version.lombok>
-        <version.controlsfx>11.2.1</version.controlsfx>
+        <version.javafx>25.0.1</version.javafx>
+        <version.lombok>1.18.42</version.lombok>
+        <version.controlsfx>11.2.2</version.controlsfx>
         <version.sqlite>3.47.1.0</version.sqlite>
         <version.ikonli>12.4.0</version.ikonli>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
-        <version.jackson>2.17.0</version.jackson>
+        <version.jackson>2.19.2</version.jackson>
         <version.atlantafx>2.1.0</version.atlantafx>
         <version.maven-scm-plugin>2.0.1</version.maven-scm-plugin>
         <version.maven-install-plugin>2.4</version.maven-install-plugin>
@@ -30,7 +28,7 @@
         <version.properties-maven-plugin>1.2.1</version.properties-maven-plugin>
         <version.maven-dependency-plugin>3.8.1</version.maven-dependency-plugin>
         <version.jgit>7.2.0.202503040940-r</version.jgit>
-        <version.slf4j>2.0.17</version.slf4j>
+        <version.logger>2.25.2</version.logger>
         <version.commons-cli>1.5.0.redhat-00001</version.commons-cli>
         <version.junit>4.13.2</version.junit>
         <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
@@ -120,13 +118,28 @@
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
-            <artifactId>ikonli-fontawesome-pack</artifactId>
+            <artifactId>ikonli-fontawesome6-pack</artifactId>
             <version>${version.ikonli}</version>
         </dependency>
         <dependency>
             <groupId>io.github.mkpaz</groupId>
             <artifactId>atlantafx-base</artifactId>
             <version>${version.atlantafx}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${version.logger}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${version.logger}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>${version.logger}</version>
         </dependency>
     </dependencies>
     <build>
@@ -145,10 +158,10 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.32</version>
+                            <version>${version.lombok}</version>
                         </path>
                     </annotationProcessorPaths>
-                    <release>22</release>
+                    <release>25</release>
                 </configuration>
             </plugin>
             <plugin>
