WIP adding module support for jlink packaging

--- a/pom.xml
+++ b/pom.xml
@@ -97,16 +97,6 @@
             <version>${version.jackson}</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit</artifactId>
-            <version>${version.jgit}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit.ssh.apache</artifactId>
-            <version>${version.jgit}</version>
-        </dependency>
-        <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-core</artifactId>
             <version>${version.ikonli}</version>
@@ -152,7 +142,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>3.14.1</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
@@ -162,6 +152,7 @@
                         </path>
                     </annotationProcessorPaths>
                     <release>25</release>
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
