--- a/pom.xml
+++ b/pom.xml
@@ -145,24 +145,30 @@
             <version>2.20.0</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.5.0.Final</version>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpa</artifactId>
+            <version>4.0.8</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-community-dialects</artifactId>
-            <version>6.5.0.Final</version>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.core</artifactId>
+            <version>4.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.6.0</version>
+            <version>1.6.3</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
             <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.transaction</groupId>
+            <artifactId>jakarta.transaction-api</artifactId>
+            <version>2.0.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -186,7 +192,7 @@
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>1.6.0</version>
+                            <version>1.6.3</version>
                         </path>
                     </annotationProcessorPaths>
                     <release>25</release>
@@ -229,6 +235,7 @@
                         <option>--enable-native-access=javafx.web</option>
                         <option>--enable-native-access=org.xerial.sqlitejdbc</option>
                         <option>--enable-native-access=javafx.graphics</option>
+                        <option>--include-locales=en</option>
                     </options>
                 </configuration>
                 <executions>
@@ -259,7 +266,8 @@
                         <id>debug</id>
                         <configuration>
                             <options>
-                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:5050</option>
+                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:5050
+                                </option>
                                 <option>--add-reads=seriouscontentmanager=ALL-UNNAMED</option>
                                 <option>--add-opens=seriouscontentmanager/com.wlf.app.main.data=ALL-UNNAMED</option>
                                 <option>--enable-native-access=javafx.web</option>
